--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body {
   font-size: 40px;
   padding-bottom: 1rem;
   font-family: 'Young Serif', serif;
+  font-weight: 400;
 }
 .preparation {
   background-color: var(--preparation-bg);
@@ -120,6 +121,7 @@ body {
   font-size: 28px;
   padding-bottom: 1.5rem;
   font-family: 'Young Serif', serif;
+  font-weight: 400;
 }
 .preparation__list,
 .ingredients__list,
